--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "doc"]
 	path = doc
-	url = git@github.com:schuhschuh/gflags.git
+	url = git@github.com:gflags/gflags.git
 	branch = gh-pages
