--- a/test/nc/CMakeLists.txt
+++ b/test/nc/CMakeLists.txt
@@ -10,7 +10,7 @@ string (TOUPPER ${TEST_NAME} TEST_NAME_UPPER)
 project (gflags_nc_${TEST_NAME})
 
 find_package (gflags REQUIRED)
-link_libraries (gflags_nothreads)
 include_directories ("${CMAKE_CURRENT_SOURCE_DIR}/..")
 add_definitions (-DTEST_${TEST_NAME_UPPER})
 add_executable (gflags_nc_${TEST_NAME} gflags_nc.cc)
+target_link_libraries(gflags_nc_${TEST_NAME} ${gflags_LIBRARIES})
