--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -298,21 +298,19 @@ set (TARGETS)
 # static vs. shared
 foreach (TYPE IN ITEMS STATIC SHARED)
   if (BUILD_${TYPE}_LIBS)
-
     string (TOLOWER "${TYPE}" type)
-
     # whether or not targets are a DLL
     if (OS_WINDOWS AND "^${TYPE}$" STREQUAL "^SHARED$")
       set (GFLAGS_IS_A_DLL 1)
-      set(GFLAG_STATIC_EXTENSION "")
     else ()
-      if (OS_WINDOWS)
-        set(GFLAG_STATIC_EXTENSION _${type})
-      endif ()
       set (GFLAGS_IS_A_DLL 0)
     endif ()
-
-
+    # filename suffix for static libraries on Windows
+    if (OS_WINDOWS AND "^${TYPE}$" STREQUAL "^STATIC$")
+      set (type_suffix "_${type}")
+    else ()
+      set (type_suffix "")
+    endif ()
     # multi-threaded vs. single-threaded
     foreach (opts IN ITEMS "" _nothreads)
       if (BUILD_gflags${opts}_LIB)
@@ -333,10 +331,9 @@ foreach (TYPE IN ITEMS STATIC SHARED)
             target_link_libraries (gflags${opts}-${type} ${CMAKE_THREAD_LIBS_INIT})
           endif ()
         endif ()
-
         set_target_properties (
           gflags${opts}-${type} PROPERTIES COMPILE_DEFINITIONS "${defines}"
-                                           OUTPUT_NAME         "gflags${opts}${GFLAG_STATIC_EXTENSION}"
+                                           OUTPUT_NAME         "gflags${opts}${type_suffix}"
                                            VERSION             "${PACKAGE_VERSION}"
                                            SOVERSION           "${PACKAGE_SOVERSION}"
         )
